--- a/apis/utils_py.html
+++ b/apis/utils_py.html
@@ -1662,7 +1662,7 @@
 </dd>
 <dt><kbd>out</kbd></dt>
 <dd><p>The output filename. If omitted, then output to sys.stdout</p>
-<p>Default: &lt;encodings.utf_8.StreamWriter object at 0x7fda07e7f700&gt;</p>
+<p>Default: &lt;encodings.utf_8.StreamWriter object at 0x7fd9e81ef3a0&gt;</p>
 </dd>
 </dl>
 </section>
@@ -1701,7 +1701,7 @@
 </dd>
 <dt><kbd>--out</kbd></dt>
 <dd><p>The output filename. If omitted, then output to sys.stdout</p>
-<p>Default: &lt;encodings.utf_8.StreamWriter object at 0x7fda07e7f700&gt;</p>
+<p>Default: &lt;encodings.utf_8.StreamWriter object at 0x7fd9e81ef3a0&gt;</p>
 </dd>
 </dl>
 </section>
