--- a/apis/utils_py.html
+++ b/apis/utils_py.html
@@ -1672,7 +1672,7 @@
 </dd>
 <dt><kbd>out</kbd></dt>
 <dd><p>The output filename. If omitted, then output to sys.stdout</p>
-<p>Default: &lt;encodings.utf_8.StreamWriter object at 0x7f9b83c88df0&gt;</p>
+<p>Default: &lt;encodings.utf_8.StreamWriter object at 0x7fea4e1ceca0&gt;</p>
 </dd>
 </dl>
 </section>
@@ -1711,7 +1711,7 @@
 </dd>
 <dt><kbd>--out</kbd></dt>
 <dd><p>The output filename. If omitted, then output to sys.stdout</p>
-<p>Default: &lt;encodings.utf_8.StreamWriter object at 0x7f9b83c88df0&gt;</p>
+<p>Default: &lt;encodings.utf_8.StreamWriter object at 0x7fea4e1ceca0&gt;</p>
 </dd>
 </dl>
 </section>
